practice/aliyun/ack/go-starter/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-go-starter
  namespace: yuyang
  labels:
    app:  deployment-go-starter
spec:
  selector:
    matchLabels:
      app: pod-go-starter
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-go-starter
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: pod-go-starter
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name:  pod-go-starter
        image: yydsops-harbor.labworlds.cc/go-starter/master:yuyang-08211717
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/users
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-harbor-login
