practice/aliyun/ack/go-starter/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-go-starter
  namespace: yuyang
spec:
  selector:
    app: pod-go-starter
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http-go-starter
    protocol: TCP
    port: 8080
    targetPort: 8080
